Changed styling and added labels for post inputs, as well as https validation

--- a/react-app/src/components/PostForm/css/index.css
+++ b/react-app/src/components/PostForm/css/index.css
@@ -39,7 +39,7 @@
 	margin-bottom: 10px;
 }
 
-.page-tutle {
+.page-title {
 	margin-bottom: 15px;
 }
 
@@ -74,8 +74,10 @@
 	box-sizing: border-box;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
+	gap: 5px;
 	padding: 10px 0px;
+	flex-direction: column;
 }
 
 .title {
@@ -90,6 +92,12 @@
 	min-height: 122px;
 	resize: vertical;
 	padding: 8px 16px;
+}
+
+.text-form-container {
+	flex-direction: column;
+	gap: 5px;
+	display: flex;
 }
 
 .title,
@@ -149,6 +157,8 @@
 	justify-content: center;
 	align-items: center;
 	min-height: 58px;
+	flex-direction: column;
+	gap: 10px;
 }
 .preview-image-upload {
 	width: 200px;
@@ -227,9 +237,7 @@ input[type="file"] {
 .disabled {
 	background-color: rgb(131, 131, 131);
 	cursor: not-allowed;
-
 }
-
 
 .image-upload-error {
 	color: red;
