--- a/react-app/src/components/About/footer.css
+++ b/react-app/src/components/About/footer.css
@@ -1,16 +1,14 @@
 #footer-container-main {
 	width: 100%;
-	height: 50px;
+
 	position: fixed;
 	bottom: 0px;
 	z-index: 10;
-	padding: 0px 50px;
-	box-sizing: border-box;
+	/* box-sizing: border-box; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	gap: 50px;
-	margin-bottom: 5px;
 }
 
 #footer-inner-container {
@@ -22,7 +20,7 @@
 	justify-content: space-around;
 	align-items: center;
 	gap: 50px;
-	width: 50%;
+	width: 100%;
 	padding: 3px;
 	color: black;
 }
