Removed title from url

--- a/react-app/src/components/PostForm/css/index.css
+++ b/react-app/src/components/PostForm/css/index.css
@@ -6,6 +6,7 @@
 	justify-content: center;
 	/* align-items: flex-start; */
 	margin: auto;
+	margin-bottom: 100px;
 
 	/* background-color: rgb(255, 255, 255); */
 }
