--- a/react-app/src/components/Profile/css/index.css
+++ b/react-app/src/components/Profile/css/index.css
@@ -30,6 +30,7 @@
 .user-info-card {
 	height: fit-content;
 	min-width: 312px;
+	max-width: 412px;
 	box-sizing: border-box;
 	padding: 12px;
 	position: relative;
@@ -76,6 +77,8 @@
 
 .h3-username {
 	margin: 0px;
+	word-wrap: break-word;
+	max-width: 50%;
 }
 
 .karma-cakeday-container {
@@ -399,6 +402,8 @@
 
 #empty-post-big-text {
 	font-size: 30px;
+	word-break: break-all;
+	max-width: 70%;
 }
 
 @media screen and (max-width: 1300px) {
