Fixed text-area resize issue

--- a/react-app/src/components/PostForm/css/index.css
+++ b/react-app/src/components/PostForm/css/index.css
@@ -10,7 +10,9 @@
 
 	/* background-color: rgb(255, 255, 255); */
 }
-
+#post-text {
+	resize: none;
+}
 .post-form {
 	background-color: rgb(255, 255, 255);
 	padding: 10px 10px;
