Added some styling to post edit button

--- a/react-app/src/components/SinglePost/css/index.css
+++ b/react-app/src/components/SinglePost/css/index.css
@@ -99,3 +99,9 @@
 .sub-post-info.single {
 	height: fit-content;
 }
+
+#post-edit-cancel-button,
+#post-edit-submit-button{
+	width: fit-content;
+	margin-top: 5px;
+}
