--- a/react-app/src/components/SinglePost/css/index.css
+++ b/react-app/src/components/SinglePost/css/index.css
@@ -14,18 +14,21 @@
 
 .single-post-container {
 	width: fit-content;
+	max-width: 640px;
 	display: flex;
 	justify-content: center;
-	/* flex-direction: row; */
+	flex-direction: column;
 	align-items: center;
 	background-color: white;
 	border-radius: 4px;
+	/* gap: 50px; */
 }
 
 .single-post {
 	display: flex;
 	min-width: 640px;
 	max-width: 640px;
+
 	/* max-width: 60%; */
 }
 
@@ -101,7 +104,85 @@
 }
 
 #post-edit-cancel-button,
-#post-edit-submit-button{
+#post-edit-submit-button {
 	width: fit-content;
 	margin-top: 5px;
+}
+
+.single-post-gray-bar {
+	height: 16px;
+	width: 100%;
+	background-color: rgb(219, 224, 229);
+}
+
+.single-post-comments-container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	max-width: 640px;
+	gap: 10px;
+	padding: 10px;
+	border-radius: 4px;
+}
+
+.single-post-page-comment {
+	width: 95%;
+	height: fit-content;
+	display: flex;
+	flex-direction: row;
+	padding-left: 8px;
+	padding-top: 8px;
+	box-sizing: border-box;
+	gap: 5px;
+	
+}
+
+.single-post-comment-left {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 5px;
+	
+}
+
+.comment-collapse-bar {
+	height: 100%;
+	width: 2px;
+	background-color: rgb(248, 249, 250);
+}
+
+.single-post-comment-right {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.single-post-comment-profile-image {
+	height: 28px;
+	width: 28px;
+	border-radius: 9999px;
+}
+
+.single-post-comment-username {
+	font-size: 12px;
+	font-weight: 500;
+	font-family: "IBM Plex Sans Bold", sans-serif;
+}
+
+.single-post-comment-username:hover {
+	text-decoration: underline;
+}
+
+.single-post-comment-time-elapsed {
+	font-size: 12px;
+	color: rgb(124, 124, 124);
+	font-weight: 400;
+}
+
+.single-post-comment-votes-container {
+	display: flex;
+	gap: 5px;
+	font-size: 14px;
 }
