--- a/react-app/src/components/SinglePost/css/index.css
+++ b/react-app/src/components/SinglePost/css/index.css
@@ -136,7 +136,6 @@
 	padding-top: 8px;
 	box-sizing: border-box;
 	gap: 5px;
-	
 }
 
 .single-post-comment-left {
@@ -144,13 +143,12 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 5px;
-	
 }
 
 .comment-collapse-bar {
 	height: 100%;
 	width: 2px;
-	background-color: rgb(248, 249, 250);
+	background-color: rgb(237, 239, 241);
 }
 
 .single-post-comment-right {
@@ -185,4 +183,61 @@
 	display: flex;
 	gap: 5px;
 	font-size: 14px;
+}
+
+.make-comment-form {
+	width: 90%;
+	display: flex;
+	justify-content: center;
+	min-height: 138px;
+	height: 100%;
+	flex-direction: column;
+
+	border: solid 2px rgb(237, 239, 241);
+	border-radius: 4px;
+}
+
+.make-comment-input {
+	width: 100%;
+	min-height: 106px;
+	border: none;
+	border-radius: 4px;
+	padding: 5px 10px;
+	resize: vertical;
+	box-sizing: border-box;
+}
+
+.make-comment-input:focus {
+	border: solid 1px black;
+	outline: none;
+}
+
+.make-comment-form-bottom-container {
+	width: 100%;
+	height: 32px;
+	background-color: rgb(246, 247, 248);
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	display: flex;
+	justify-content: flex-end;
+	padding: 5px 10px;
+	box-sizing: border-box;
+}
+
+.submit-comment-button {
+	border-radius: 4px;
+	height: 24px;
+	background-color: rgb(70, 78, 88);
+	color: white;
+	border-radius: 9999px;
+	outline: none;
+	border: none;
+	width: 100px;
+	font-size: 12px;
+	cursor: pointer;
+}
+
+.disabled-comment {
+	background-color: rgb(112, 112, 112);
+	cursor: not-allowed;
 }
