--- a/react-app/src/components/Subreddit/css/index.css
+++ b/react-app/src/components/Subreddit/css/index.css
@@ -191,7 +191,7 @@ h1 {
 .sub-post-info-container {
 	/* padding: 5px; */
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 	width: 90%;
 }
 
