--- a/react-app/src/components/NavBar/css/index.css
+++ b/react-app/src/components/NavBar/css/index.css
@@ -227,6 +227,31 @@ a {
 .fa-thin.fa-plus:hover {
 	background-color: rgb(235, 235, 235);
 }
+
+.search-bar-container {
+	/* border: solid 1px rebeccapurple; */
+	width: 30%;
+	height: 34px;
+	font-size: 16px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.search-bar {
+	width: 100%;
+	height: 100%;
+	background-color: rgb(246, 247, 248);
+	padding: 10px;
+	box-sizing: border-box;
+	border-radius: 4px;
+	border: solid 1px rgb(237, 239, 241);
+}
+
+.search-bar:focus {
+	background-color: white;
+	border: solid 1px blue;
+}
+
 @media screen and (max-width: 1100px) {
 	.subreddit-info {
 		display: none;
