--- a/react-app/src/components/SearchPage/index.css
+++ b/react-app/src/components/SearchPage/index.css
@@ -2,18 +2,21 @@
 	display: flex;
 	width: 100%;
 	height: 100%;
+	max-width: 980px;
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
 	padding: 24px;
 	gap: 20px;
+    margin: auto;
 }
 
 .search-page-results {
 	display: flex;
 	flex-direction: column;
 	gap: 1px;
-	width: 80%;
+	width: 100%;
+	align-items: center;
 }
 
 .search-page-tabs {
@@ -23,6 +26,7 @@
 	height: 41px;
 	align-items: center;
 	gap: 5px;
+	max-width: 980px;
 }
 
 .search-page-tab {
@@ -45,7 +49,8 @@
 .search-posts-outer-container {
 	display: flex;
 	flex-direction: row;
-	gap: 50px;
+	width: fit-content;
+	gap: 20px;
 }
 
 .search-post-card {
@@ -66,6 +71,10 @@
 	height: 32px;
 }
 
+.search-post-side-title {
+	padding: 10px;
+}
+
 .search-post-user-profile {
 	width: 32px;
 	height: 32px;
@@ -79,6 +88,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+    
 }
 .search-post-top {
 	display: flex;
@@ -131,6 +141,42 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1px;
+	/* width: 100%; */
+}
+
+.search-posts-right {
+	display: flex;
+	flex-direction: column;
+	/* background-color: black; */
+	gap: 20px;
+	min-width: 310px;
+}
+
+.search-post-communities,
+.search-post-users {
+	width: 100%;
+	background-color: white;
+	border-radius: 4px;
+	display: flex;
+	flex-direction: column;
+	/* gap: 10px; */
+	/* padding: 20px 10px; */
+}
+.search-post-community-small,
+.search-post-users-small {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 20px;
+	border-bottom: solid 1px lightgray;
+}
+
+.search-page-see-more {
+	display: flex;
+	align-items: center;
+	padding: 20px;
+	color: blue;
+	cursor: pointer;
 }
 
 .search-page-subreddit {
