--- a/react-app/src/components/About/index.css
+++ b/react-app/src/components/About/index.css
@@ -39,6 +39,19 @@ ul {
 	margin-bottom: 5px;
 }
 
+.info-card-created {
+	background-color: white;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	padding: 15px;
+	box-sizing: border-box;
+	height: fit-content;
+	display: flex;
+	flex-direction: column;
+	/* align-items: center; */
+	gap: 10px;
+}
+
 @media screen and (max-width: 1100px) {
 	ul {
 		flex-direction: column;
