--- a/react-app/src/components/Subreddit/css/index.css
+++ b/react-app/src/components/Subreddit/css/index.css
@@ -31,18 +31,31 @@
 .subreddit-banner {
 	width: 100%;
 	max-width: 100%;
-	border: solid 1px rgb(204, 204, 204);
 	box-sizing: border-box;
 }
 
 .banner {
 	width: 100%;
 	max-width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .banner-image-placeholder {
 	width: 100%;
 	height: 80px;
 	background-color: rgb(51, 168, 255);
+}
+
+.banner-image {
+	height: 80px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgb(51, 168, 255);
+	font-size: 40px;
+	font-family: "IBM Plex Sans Bold", sans-serif;
 }
 
 .banner-title-container {
