Added media query for home page and navbar

--- a/react-app/src/components/HomePage/index.css
+++ b/react-app/src/components/HomePage/index.css
@@ -130,3 +130,16 @@
 .splash-about:hover {
 	color: rgb(0, 121, 211);
 }
+
+@media screen and (max-width: 1000px) {
+	.sub-post-container {
+		width: 95vw;
+		height: 10vh;
+	}
+
+	.home-page-feed {
+		width: 100vw;
+		display: flex;
+		align-items: center;
+	}
+}
