--- a/react-app/src/components/NavBar/css/index.css
+++ b/react-app/src/components/NavBar/css/index.css
@@ -270,3 +270,57 @@ a {
 		white-space: pre;
 	}
 }
+
+@media screen and (max-width: 1000px) {
+	.nav-container {
+		height: 5vh;
+	}
+
+	.nav-logo {
+		height: 40px;
+	}
+
+	.search-bar-container {
+		height: 64px;
+		/* width: 400px; */
+		width: 40%;
+	}
+
+	.subscribed-subs-container {
+		display: none;
+	}
+
+	.logo-and-subscribed {
+		align-items: center;
+	}
+
+	.login-signup-menu {
+		height: 100%;
+	}
+
+	.submit-post-link {
+		height: 100%;
+	}
+
+	.profile-toggle {
+		height: 100%;
+	}
+
+	.submit-post-link {
+		display: none;
+	}
+
+	.profile-menu-user-info {
+		height: 100%;
+		width: 100%;
+	}
+
+	.profile-menu-profile-image {
+		height: 40px;
+		width: 40px;
+	}
+
+	.profile-menu-username {
+		font-size: 20px;
+	}
+}
