--- a/react-app/src/components/HomePage/index.css
+++ b/react-app/src/components/HomePage/index.css
@@ -133,7 +133,7 @@
 
 @media screen and (max-width: 1000px) {
 	.sub-post-container {
-		width: 95vw;
+		width: 100vw;
 		height: 10vh;
 	}
 
@@ -141,5 +141,9 @@
 		width: 100vw;
 		display: flex;
 		align-items: center;
+	}
+
+	.subreddit-posts {
+		row-gap: 0px;
 	}
 }
