--- a/react-app/src/components/SinglePost/css/index.css
+++ b/react-app/src/components/SinglePost/css/index.css
@@ -256,3 +256,26 @@
 	align-items: center;
 	gap: 10px;
 }
+
+@media screen and (max-width: 1000px) {
+	.single-post-sub-info-container {
+		width: 100vw;
+		max-width: 100vw;
+	}
+	.single-post-container {
+		width: 100vw;
+		max-width: 100vw;
+	}
+	.single-post {
+		width: 100vw;
+		max-width: 100vw;
+	}
+
+	.single-post-details {
+		width: 100vw;
+		max-width: 100vw;
+	}
+	.vote-percent {
+		margin-right: 10px;
+	}
+}
