--- a/react-app/src/components/Subreddit/css/index.css
+++ b/react-app/src/components/Subreddit/css/index.css
@@ -302,12 +302,6 @@ h1 {
 	text-decoration: underline;
 }
 
-@media screen and (max-width: 1100px) {
-	.subreddit-info {
-		display: none;
-	}
-}
-
 .empty-post-main {
 	display: flex;
 	flex-direction: column;
@@ -345,7 +339,7 @@ h1 {
 	background-color: rgba(131, 132, 133, 0.039);
 	width: 100%;
 	height: 100%;
-		max-width: 640px;
+	max-width: 640px;
 	display: flex;
 	justify-content: center;
 }
@@ -488,5 +482,25 @@ h1 {
 	}
 	100% {
 		background-color: rgb(236, 232, 232);
+	}
+}
+
+@media screen and (max-width: 1000px) {
+	.subreddit-inner-container {
+		width: 100vw;
+		max-width: 100vw;
+	}
+
+	.subreddit-posts {
+		width: 100vw;
+		max-width: 100vw;
+	}
+
+	.sub-post-container {
+		width: 100%;
+		max-width: 100vw;
+	}
+	.subreddit-info {
+		display: none;
 	}
 }
