--- a/react-app/src/components/SubredditEdit/index.css
+++ b/react-app/src/components/SubredditEdit/index.css
@@ -1,15 +1,17 @@
 .edit-subreddit-page-container {
 	background-color: rgb(218, 224, 230);
-	min-width: 100vh;
+	min-width: 100vw;
 	min-height: 96.2vh;
 	height: fit-content;
 	max-height: 100%;
 	display: flex;
 	flex-direction: column;
+	max-width: 100vw;
 }
 .edit-subreddit-page-container-inner {
 	display: flex;
 	min-height: 96.2vh;
+	max-width: 100vw;
 }
 
 .edit-subreddit-top-bar {
@@ -17,7 +19,7 @@
 	box-sizing: border-box;
 	background-color: white;
 	height: 40px;
-	max-width: 100%;
+	max-width: 100vw;
 	display: flex;
 	align-items: center;
 }
@@ -36,7 +38,7 @@
 }
 
 .edit-subreddit-sidebar {
-	width: 33%;
+	width: 33vw;
 	background-color: rgb(246, 247, 248);
 	max-width: 280px;
 	min-height: 100%;
@@ -46,11 +48,12 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 100%;
+	width: 67vw;
 	padding: 25px;
 	box-sizing: border-box;
 	gap: 10px;
 	margin-bottom: 100px;
+	overflow-x: hidden;
 }
 
 .edit-subreddit-placeholder {
@@ -348,7 +351,7 @@
 }
 
 .community-settings-container-main {
-	width: 100%;
+	width: 67vw;
 	height: 100%;
 	padding-top: 15px;
 	padding-left: 25px;
@@ -409,4 +412,9 @@
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+}
+@media screen and (max-width: 1000px) {
+	.delete-sub-container-main {
+		padding: 0px;
+	}
 }
