--- a/react-app/src/components/SearchPage/index.css
+++ b/react-app/src/components/SearchPage/index.css
@@ -9,6 +9,7 @@
 	padding: 24px;
 	gap: 20px;
 	margin: auto;
+	box-sizing: border-box;
 }
 
 .search-page-results {
@@ -64,8 +65,6 @@
 	padding: 20px 15px;
 }
 
-.search-post-card:hover {
-}
 .search-post-sub {
 	width: 32px;
 	height: 32px;
@@ -238,4 +237,21 @@
 }
 .subreddit-join:active {
 	background-color: rgb(188, 217, 239);
+}
+
+@media screen and (max-width: 1000px) {
+	.search-posts-right {
+		display: none;
+	}
+
+	.search-page-tabs {
+		justify-content: center;
+	}
+	.search-page-main-container {
+		padding-left: 0px;
+		padding-right: 0px;
+	}
+	.search-post-card {
+		width: 100vw;
+	}
 }
