--- a/react-app/src/components/Subreddit/css/index.css
+++ b/react-app/src/components/Subreddit/css/index.css
@@ -489,6 +489,9 @@ h1 {
 	.subreddit-inner-container {
 		width: 100vw;
 		max-width: 100vw;
+		flex-direction: column-reverse;
+		margin-top: 0px;
+		gap: 5px;
 	}
 
 	.subreddit-posts {
@@ -501,6 +504,45 @@ h1 {
 		max-width: 100vw;
 	}
 	.subreddit-info {
+		width: 100vw;
+	}
+	.subreddit-info-card {
+		width: 100vw;
+	}
+
+	.subreddit-info-card:not(:first-child) {
 		display: none;
+	}
+	.info-card-created {
+		display: none;
+	}
+
+	.single-post-sub-info-container > .subreddit-info {
+		display: none;
+	}
+
+	.subreddit-loading {
+		width: 100vw;
+	}
+
+	.loading-post-container {
+		width: 100vw;
+	}
+	.loading-right {
+		width: 100%;
+	}
+	.loading-top {
+		width: 100%;
+	}
+
+	.loading-post {
+		width: 95%;
+	}
+
+	.empty-post-main,
+	.empty-post-container,
+	.empty-post-text-container-flex {
+		width: 100vw;
+		max-width: 100vw;
 	}
 }
