Increased width of posts on proifle

--- a/react-app/src/components/Profile/css/index.css
+++ b/react-app/src/components/Profile/css/index.css
@@ -439,4 +439,20 @@
 		width: 100%;
 		max-width: 100%;
 	}
+
+	.user-post-container {
+		width: 100%;
+	}
+
+	.profile-post-info-container {
+		width: 100%;
+	}
+
+	.profile-post-text {
+		width: 100%;
+	}
+
+	.profile-post-info-container {
+		max-width: none;
+	}
 }
