--- a/react-app/src/components/SinglePost/css/index.css
+++ b/react-app/src/components/SinglePost/css/index.css
@@ -269,11 +269,16 @@
 	.single-post {
 		width: 100vw;
 		max-width: 100vw;
+		min-width: 100vw;
 	}
 
 	.single-post-details {
-		width: 100vw;
+		width: 100%;
+		max-width: 100%;
+	}
+	.single-post-comments-container {
 		max-width: 100vw;
+		box-sizing: border-box;
 	}
 	.vote-percent {
 		margin-right: 10px;
