--- a/react-app/src/components/About/index.css
+++ b/react-app/src/components/About/index.css
@@ -52,15 +52,20 @@ ul {
 	gap: 10px;
 }
 
-
 @media screen and (max-width: 1000px) {
 	.about-container {
-		width: 90vw;
+		width: 100vw;
+		min-width: 100vw;
+		max-width: 100vw;
+		margin: 0px;
+		box-sizing: border-box;
 	}
 	.about-container-main {
-		min-width: fit-content;
+		/* min-width: fit-content; */
+		max-width: 100vw;
 	}
-	.about-container {
-		min-width: fit-content;
+
+	.about-container > ul {
+		flex-direction: column;
 	}
 }
