--- a/react-app/src/components/HomePage/index.css
+++ b/react-app/src/components/HomePage/index.css
@@ -143,11 +143,6 @@
 		max-width: 100vw;
 	}
 
-	.sub-post-info-container {
-		max-width: 100%;
-		width: 100vw;
-	}
-
 	.home-page-feed {
 		width: 100vw;
 		display: flex;
@@ -169,6 +164,7 @@
 		gap: 5px;
 	}
 
+	.sub-post-info-container,
 	.home-sub-list,
 	.reccomended-title {
 		width: 100vw;
