--- a/react-app/src/components/Subreddit/css/index.css
+++ b/react-app/src/components/Subreddit/css/index.css
@@ -88,10 +88,6 @@
 	background-color: white;
 	box-sizing: border-box;
 }
-h1 {
-	padding: 0px;
-	margin: 0px;
-}
 
 .title-name {
 	margin-left: 90px;
@@ -205,7 +201,6 @@ h1 {
 }
 
 .sub-post-info-container {
-	/* padding: 5px; */
 	display: flex;
 	justify-content: space-between;
 	width: 90%;
@@ -476,6 +471,11 @@ h1 {
 	text-decoration: underline;
 }
 
+h1 {
+	padding: 0px;
+	margin: 0px;
+}
+
 @keyframes gradient {
 	0% {
 		background-color: rgb(228, 226, 226);
@@ -530,13 +530,25 @@ h1 {
 	}
 	.loading-right {
 		width: 100%;
+		max-width: 100%;
+		padding: 0px;
+		padding-top: 10px;
 	}
 	.loading-top {
+		max-width: 100%;
 		width: 100%;
 	}
 
 	.loading-post {
 		width: 95%;
+	}
+
+	.loading-subheader {
+		max-width: 95%;
+	}
+
+	.loading-interactions {
+		max-width: 95%;
 	}
 
 	.empty-post-main,
